# GTestJNI

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/gtestjni/: GtestRunner.java  TargetLibrary.java
app/src/main/cpp/: app_test.cpp  gtest_wrapper.cpp
app/src/test/java/com/android/gtestjni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
gtest/: CMakeLists.txt  build.gradle
gtest/src/androidTest/java/com/android/gtest/: ExampleInstrumentedTest.kt
gtest/src/main/: AndroidManifest.xml
gtest/src/main/cpp/googletest/cmake/: internal_utils.cmake
gtest/src/test/java/com/android/gtest/: ExampleUnitTest.kt
gtestjni/: CMakeLists.txt  build.gradle
gtestjni/src/androidTest/java/com/android/gtestjni/: ExampleInstrumentedTest.kt
gtestjni/src/main/: AndroidManifest.xml
gtestjni/src/main/cpp/: adder.cpp  app.cpp
gtestjni/src/main/java/com/android/gtestjni/: MainActivity.kt
gtestjni/src/main/res/values/: strings.xml
